k8s/k8s/production/vn/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logistic-ingress
  namespace: ${KUBE_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/body-size: 200m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: 4G
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
  - hosts:
    - api-oms.vigoretail.com
    secretName: tls-secret
  - hosts:
    - apigateway.vigoretail.com
    secretName: apigateway-tls-secret
  rules:
  - host: api-oms.vigoretail.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 8080
  - host: apigateway.vigoretail.com
    http:
      paths:
      - path: /dms/(.*)
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 8080
